--- a/ChristmasProject2021.vcxproj.filters
+++ b/ChristmasProject2021.vcxproj.filters
@@ -214,6 +214,12 @@
     <ClInclude Include="src\events\event_device.h">
       <Filter>events</Filter>
     </ClInclude>
+    <ClInclude Include="src\events\event_dispatch.h">
+      <Filter>events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\events\event_listener.h">
+      <Filter>events</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="TODO.txt" />
