Starting work on widget animations

--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -168,6 +168,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClCompile Include="src\states\state_pre_game.cpp" />
     <ClCompile Include="src\tile_map.cpp" />
     <ClCompile Include="src\ui\widget.cpp" />
+    <ClCompile Include="src\ui\widget_animation.cpp" />
     <ClCompile Include="src\ui\widget_button.cpp" />
     <ClCompile Include="src\ui\widget_image.cpp" />
     <ClCompile Include="src\utils.cpp" />
@@ -212,6 +213,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClInclude Include="src\states\state_pre_game.h" />
     <ClInclude Include="src\tile_map.h" />
     <ClInclude Include="src\ui\widget.h" />
+    <ClInclude Include="src\ui\widget_animation.h" />
     <ClInclude Include="src\ui\widget_button.h" />
     <ClInclude Include="src\ui\widget_image.h" />
     <ClInclude Include="src\utils.h" />
