--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -168,7 +168,13 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClCompile Include="src\states\state_pre_game.cpp" />
     <ClCompile Include="src\tile_map.cpp" />
     <ClCompile Include="src\ui\group.cpp" />
-    <ClCompile Include="src\ui\layout_entity.cpp" />
+    <ClCompile Include="src\ui\layouts\animation_clip.cpp" />
+    <ClCompile Include="src\ui\layouts\animation_clip_info.cpp" />
+    <ClCompile Include="src\ui\layouts\animation_track.cpp" />
+    <ClCompile Include="src\ui\layouts\layout.cpp" />
+    <ClCompile Include="src\ui\layouts\layout_entity.cpp" />
+    <ClCompile Include="src\ui\layouts\layout_entity_group.cpp" />
+    <ClCompile Include="src\ui\layouts\layout_entity_image.cpp" />
     <ClCompile Include="src\ui\node.cpp" />
     <ClCompile Include="src\ui\node_image.cpp" />
     <ClCompile Include="src\utils.cpp" />
@@ -214,10 +220,17 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClInclude Include="src\tile_map.h" />
     <ClInclude Include="src\ui\group.h" />
     <ClInclude Include="src\ui\inspectors.h" />
-    <ClInclude Include="src\ui\layout_entity.h" />
-    <ClInclude Include="src\ui\layout_types.h" />
+    <ClInclude Include="src\ui\layouts\animation_clip.h" />
+    <ClInclude Include="src\ui\layouts\animation_clip_info.h" />
+    <ClInclude Include="src\ui\layouts\animation_track.h" />
+    <ClInclude Include="src\ui\layouts\layout.h" />
+    <ClInclude Include="src\ui\layouts\layout_entity.h" />
+    <ClInclude Include="src\ui\layouts\layout_entity_group.h" />
+    <ClInclude Include="src\ui\layouts\layout_entity_image.h" />
+    <ClInclude Include="src\ui\layouts\layout_types.h" />
     <ClInclude Include="src\ui\node.h" />
     <ClInclude Include="src\ui\node_image.h" />
+    <ClInclude Include="src\ui\ui_fwd.h" />
     <ClInclude Include="src\utils.h" />
   </ItemGroup>
   <ItemGroup>
