Switched to imgui docking branch. Adding editor layer Have working selection and bounds anchors Image loading

--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -167,7 +167,11 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClCompile Include="src\states\state_post_game.cpp" />
     <ClCompile Include="src\states\state_pre_game.cpp" />
     <ClCompile Include="src\tile_map.cpp" />
+    <ClCompile Include="src\ui\editor\anchor_bounds_handle.cpp" />
+    <ClCompile Include="src\ui\editor\bounds_handle.cpp" />
+    <ClCompile Include="src\ui\editor\bounds_widget.cpp" />
     <ClCompile Include="src\ui\editor\editor_layer.cpp" />
+    <ClCompile Include="src\ui\editor\offset_bounds_handle.cpp" />
     <ClCompile Include="src\ui\group.cpp" />
     <ClCompile Include="src\ui\layouts\animation_clip.cpp" />
     <ClCompile Include="src\ui\layouts\animation_clip_info.cpp" />
@@ -220,7 +224,11 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClInclude Include="src\states\state_post_game.h" />
     <ClInclude Include="src\states\state_pre_game.h" />
     <ClInclude Include="src\tile_map.h" />
+    <ClInclude Include="src\ui\editor\anchor_bounds_handle.h" />
+    <ClInclude Include="src\ui\editor\bounds_handle.h" />
+    <ClInclude Include="src\ui\editor\bounds_widget.h" />
     <ClInclude Include="src\ui\editor\editor_layer.h" />
+    <ClInclude Include="src\ui\editor\offset_bounds_handle.h" />
     <ClInclude Include="src\ui\group.h" />
     <ClInclude Include="src\ui\inspectors.h" />
     <ClInclude Include="src\ui\layouts\animation_clip.h" />
