--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -47,7 +47,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SDL_PATH)\include;$(SDL_IMAGE_PATH)\include;$(SDL_TTF_PATH)\include;$(SDL_MIXER_PATH)\include;external\imgui;external\entt\single_include;external\spdlog\include;external\json\single_include;external\glm;external\imgui-filebrowser;$(IncludePath)</IncludePath>
+    <IncludePath>$(SDL_PATH)\include;$(SDL_IMAGE_PATH)\include;$(SDL_TTF_PATH)\include;$(SDL_MIXER_PATH)\include;external\imgui;external\entt\single_include;external\spdlog\include;external\json\single_include;external\glm;external\imgui-filebrowser;external\ImGuizmo;$(IncludePath)</IncludePath>
     <LibraryPath>$(SDL_PATH)\lib\x64;$(SDL_IMAGE_PATH)\lib\x64;$(SDL_TTF_PATH)\lib\x64;$(SDL_MIXER_PATH)\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -103,6 +103,21 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="external\ImGuizmo\GraphEditor.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="external\ImGuizmo\ImCurveEdit.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="external\ImGuizmo\ImGradient.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="external\ImGuizmo\ImGuizmo.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="external\ImGuizmo\ImSequencer.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="external\imgui\backends\imgui_impl_sdl.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
@@ -171,6 +186,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClCompile Include="src\ui\editor\bounds_handle.cpp" />
     <ClCompile Include="src\ui\editor\bounds_widget.cpp" />
     <ClCompile Include="src\ui\editor\editor_layer.cpp" />
+    <ClCompile Include="src\ui\editor\im_animation_tracks.cpp" />
     <ClCompile Include="src\ui\editor\offset_bounds_handle.cpp" />
     <ClCompile Include="src\ui\group.cpp" />
     <ClCompile Include="src\ui\layouts\animation_clip.cpp" />
@@ -186,6 +202,18 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="external\imgui-filebrowser\imfilebrowser.h" />
+    <ClInclude Include="external\ImGuizmo\GraphEditor.h" />
+    <ClInclude Include="external\ImGuizmo\ImCurveEdit.h" />
+    <ClInclude Include="external\ImGuizmo\ImGradient.h" />
+    <ClInclude Include="external\ImGuizmo\ImGuizmo.h" />
+    <ClInclude Include="external\ImGuizmo\ImSequencer.h" />
+    <ClInclude Include="external\ImGuizmo\ImZoomSlider.h" />
+    <ClInclude Include="external\imgui\imconfig.h" />
+    <ClInclude Include="external\imgui\imgui.h" />
+    <ClInclude Include="external\imgui\imgui_internal.h" />
+    <ClInclude Include="external\imgui\imstb_rectpack.h" />
+    <ClInclude Include="external\imgui\imstb_textedit.h" />
+    <ClInclude Include="external\imgui\imstb_truetype.h" />
     <ClInclude Include="src\audio_factory.h" />
     <ClInclude Include="src\debug\inspectors.h" />
     <ClInclude Include="src\ecs\components\components.h" />
@@ -228,6 +256,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClInclude Include="src\ui\editor\bounds_handle.h" />
     <ClInclude Include="src\ui\editor\bounds_widget.h" />
     <ClInclude Include="src\ui\editor\editor_layer.h" />
+    <ClInclude Include="src\ui\editor\im_animation_tracks.h" />
     <ClInclude Include="src\ui\editor\offset_bounds_handle.h" />
     <ClInclude Include="src\ui\group.h" />
     <ClInclude Include="src\ui\inspectors.h" />
