--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -183,6 +183,9 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClCompile Include="src\states\state_pre_game.cpp" />
     <ClCompile Include="src\tile_map.cpp" />
     <ClCompile Include="src\ui\animation_controller.cpp" />
+    <ClCompile Include="src\ui\editor\actions\add_action.cpp" />
+    <ClCompile Include="src\ui\editor\actions\change_bounds_action.cpp" />
+    <ClCompile Include="src\ui\editor\actions\delete_action.cpp" />
     <ClCompile Include="src\ui\editor\anchor_bounds_handle.cpp" />
     <ClCompile Include="src\ui\editor\animation_editor.cpp" />
     <ClCompile Include="src\ui\editor\bounds_handle.cpp" />
@@ -254,6 +257,10 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClInclude Include="src\states\state_pre_game.h" />
     <ClInclude Include="src\tile_map.h" />
     <ClInclude Include="src\ui\animation_controller.h" />
+    <ClInclude Include="src\ui\editor\actions\add_action.h" />
+    <ClInclude Include="src\ui\editor\actions\change_bounds_action.h" />
+    <ClInclude Include="src\ui\editor\actions\delete_action.h" />
+    <ClInclude Include="src\ui\editor\actions\editor_action.h" />
     <ClInclude Include="src\ui\editor\anchor_bounds_handle.h" />
     <ClInclude Include="src\ui\editor\animation_editor.h" />
     <ClInclude Include="src\ui\editor\bounds_handle.h" />
