--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -47,7 +47,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SDL_PATH)\include;$(SDL_IMAGE_PATH)\include;$(SDL_TTF_PATH)\include;$(SDL_MIXER_PATH)\include;external\imgui;external\entt\single_include;external\spdlog\include;external\json\single_include;external\glm;external\imgui-filebrowser;external\ImGuizmo;$(IncludePath)</IncludePath>
+    <IncludePath>$(SDL_PATH)\include;$(SDL_IMAGE_PATH)\include;$(SDL_TTF_PATH)\include;$(SDL_MIXER_PATH)\include;external\imgui;external\entt\single_include;external\spdlog\include;external\json\single_include;external\glm;external\imgui-filebrowser;external\ImGuizmo;external\magic_enum\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SDL_PATH)\lib\x64;$(SDL_IMAGE_PATH)\lib\x64;$(SDL_TTF_PATH)\lib\x64;$(SDL_MIXER_PATH)\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -187,7 +187,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClCompile Include="src\ui\editor\actions\change_bounds_action.cpp" />
     <ClCompile Include="src\ui\editor\actions\delete_action.cpp" />
     <ClCompile Include="src\ui\editor\anchor_bounds_handle.cpp" />
-    <ClCompile Include="src\ui\editor\animation_editor.cpp" />
+    <ClCompile Include="src\ui\editor\animation_widget.cpp" />
     <ClCompile Include="src\ui\editor\bounds_handle.cpp" />
     <ClCompile Include="src\ui\editor\bounds_widget.cpp" />
     <ClCompile Include="src\ui\editor\editor_layer.cpp" />
@@ -218,6 +218,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClInclude Include="external\imgui\imstb_rectpack.h" />
     <ClInclude Include="external\imgui\imstb_textedit.h" />
     <ClInclude Include="external\imgui\imstb_truetype.h" />
+    <ClInclude Include="external\magic_enum\include\magic_enum.hpp" />
     <ClInclude Include="src\audio_factory.h" />
     <ClInclude Include="src\debug\inspectors.h" />
     <ClInclude Include="src\ecs\components\components.h" />
@@ -262,7 +263,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClInclude Include="src\ui\editor\actions\delete_action.h" />
     <ClInclude Include="src\ui\editor\actions\editor_action.h" />
     <ClInclude Include="src\ui\editor\anchor_bounds_handle.h" />
-    <ClInclude Include="src\ui\editor\animation_editor.h" />
+    <ClInclude Include="src\ui\editor\animation_widget.h" />
     <ClInclude Include="src\ui\editor\bounds_handle.h" />
     <ClInclude Include="src\ui\editor\bounds_widget.h" />
     <ClInclude Include="src\ui\editor\editor_layer.h" />
