--- a/ChristmasProject2021.vcxproj.filters
+++ b/ChristmasProject2021.vcxproj.filters
@@ -150,7 +150,7 @@
     <ClCompile Include="src\ui\animation_controller.cpp">
       <Filter>ui</Filter>
     </ClCompile>
-    <ClCompile Include="src\ui\editor\animation_editor.cpp">
+    <ClCompile Include="src\ui\editor\animation_widget.cpp">
       <Filter>ui\editor</Filter>
     </ClCompile>
     <ClCompile Include="src\ui\editor\actions\add_action.cpp">
@@ -208,6 +208,9 @@
     </Filter>
     <Filter Include="ui\editor\actions">
       <UniqueIdentifier>{a837e879-acc0-4767-9fca-88e762595eb3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="external\magic_enum">
+      <UniqueIdentifier>{3a9e9050-a2b4-4b37-95a6-2361055b4180}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -406,7 +409,7 @@
     <ClInclude Include="src\ui\animation_controller.h">
       <Filter>ui</Filter>
     </ClInclude>
-    <ClInclude Include="src\ui\editor\animation_editor.h">
+    <ClInclude Include="src\ui\editor\animation_widget.h">
       <Filter>ui\editor</Filter>
     </ClInclude>
     <ClInclude Include="src\ui\editor\actions\editor_action.h">
@@ -420,6 +423,9 @@
     </ClInclude>
     <ClInclude Include="src\ui\editor\actions\change_bounds_action.h">
       <Filter>ui\editor\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="external\magic_enum\include\magic_enum.hpp">
+      <Filter>external\magic_enum</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
